Allowed hosts update

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -257,7 +257,7 @@ body {
     <div class="typing">I'm a <span id="typed-role"></span></div>
     <p>A passionate student and digital enthusiast who enjoys building things that matter.</p>
     <div class="hero-buttons d-flex flex-wrap">
-      <a href="{% static 'app/files/Sandeep_Resume.pdf' %}" class="btn me-3 mb-2" target="_blank">View Resume</a>
+      <a href="{% static 'app/files/sandeep resume.pdf' %}" class="btn me-3 mb-2" target="_blank">View Resume</a>
       <a href="{% url 'projects' %}" class="btn mb-2">View Projects</a>
     </div>
   </div>
